--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-patreon: codewithsadee # Replace with a single Patreon username
+patreon: codewithdenselisha # Replace with a single Patreon username
